Adds FunCmd